[Evo] #236 - Revoir le système d'appairage d'un certificat

--- a/src/Sesile/UserBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/Sesile/UserBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -21,3 +21,6 @@ label:
     api_token: "Clé d'API"
     api_secret: 'Secret API'
     save: 'Enregistrer'
+certificate:
+    submit: 'Enregistrer ce certificat'
+    delete: 'Désappairer ce compte'
