[evo] fix #1968 - translation improvement
- Pass translation function on context 
- Get types proptypes in component import
- Add translation words

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -49,7 +49,8 @@
             "name": "circuit",
             "name_plural": "circuits",
             "complet_name": "circuit de validation",
-            "step": "Etape {{ordre}}"
+            "applicant_step": "Etape {{ordre}} - Déposante",
+            "validat_step": "Etape {{ordre}} - Validante"
         },
         "user": {
             "name": "utilisateur",
