--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -9,6 +9,10 @@
             "edit_save": "Enregistrer les modifications",
             "save": "Enregistrer",
             "edit": "éditer"
+        },
+        "label": {
+            "enabled": "active",
+            "disabled": "inactive"
         }
     },
     "admin": {
@@ -18,6 +22,9 @@
         "users_list": "Liste des utilisateurs",
         "button": {
             "save": "Ajouter le {{name}}"
+        },
+        "error": {
+            "not_extrayable_list": "Impossible de récuperer la liste de {{name}} - erreur {{errorCode}}"
         },
         "placeholder": {
             "type_user_name": "Entrez le nom d'un utilisateur...",
@@ -29,7 +36,7 @@
             "subtitle": "Puis sauvegarder"
         },
         "label": {
-            "which": "Le quel ?",
+            "which": "Lequel ?",
             "who": "Avec qui ?",
             "which_collectivite": "Quelle collectivité ?"
         },
@@ -55,6 +62,15 @@
         "user": {
             "name": "utilisateur",
             "name_plural": "utilisateurs"
+        },
+        "collectivite": {
+            "title": "Rechercher une collectivité",
+            "name": "collectivité",
+            "name_plural": "collectivités",
+            "which": "Laquelle ?",
+            "type_name": "Entrez le nom de la collectivité...",
+            "no_results": "Aucune collectivité ne correspond à votre recherche...",
+            "state": "Etat"
         }
     }
 }
