[evo] #1632 - voir la liste des classeurs sur lesquels j'ai une action de signature ou validation à effectuer
 - Improve migrateEtaeClasseur command
 - Rename classeurs's files
 - Add ClasseursList for list all classeurs
 - Add ClasseursValid for list all valid classeurs
 - Update routes in menu
 - Add endpoint api for valid classeurs
 - Add functions in classeur and user repository
 - Update translations

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -19,6 +19,14 @@
             "add": "Ajouter"
         },
         "label": {
+            "enabled": "active",
+            "disabled": "inactive"
+        },
+        "classeurs": {
+            "title_list": "liste des classeurs",
+            "title_to_sign": "classeur à signer",
+            "title_to_sign_plural": "classeurs à signer",
+            "sort": "trier"
             "enabled": "Active",
             "disabled": "inactive",
             "name": "Nom",
