--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -23,8 +23,10 @@
             "disabled": "inactive"
         },
         "classeurs": {
+            "name": "classeur",
             "title_list": "liste des classeurs",
             "title_to_sign": "classeur à signer",
+            "title_remove": "classeurs supprimable",
             "title_to_sign_plural": "classeurs à signer",
             "sort": "trier"
             "enabled": "Active",
