[evo] #1633 - voir la liste des classeurs sur lesquels j'ai un droit de rétractation
 - Add route for classeurs retractables
 - Refactor ClasseursButtonList
 - Add component ClasseursRetract
 - Add endpoint api classeur for retract classeur
 - Refactor functions etapes for entity
 - Add retractable value to classeur entity
 - Add getClasseursRetractable and isClasseursRetractableByUser functions to classeurRepository
 - Add function to EtapeClasseurRepository
 - Add function to get classeurs retractable to user entity
 - Update translations

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -26,6 +26,7 @@
             "name": "classeur",
             "title_list": "liste des classeurs",
             "title_to_sign": "classeur à signer",
+            "title_to_retract": "classeur retractable",
             "title_remove": "classeurs supprimable",
             "title_to_sign_plural": "classeurs à signer",
             "sort": "trier"
