[Evo] ref #1626 -  Details & edit collectivite
- [Evo] ref #2069 - add form validation
- Add UI components
- Components refactoring
- Improve the form verification in back

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -3,16 +3,27 @@
         "no_results": "Aucun {{name}} ne correspond à votre recherche...",
         "classeur": "classeur",
         "classeur_plural": "classeurs",
+        "confirm_delete_img": "Voulez-vous supprimer l'image",
         "button": {
             "delete": "Supprimer",
             "add_user": "Ajouter un utilisateur",
             "edit_save": "Enregistrer les modifications",
             "save": "Enregistrer",
-            "edit": "éditer"
+            "edit": "éditer",
+            "change_img": "Changer l'image",
+            "upload_img": "Ajouter une image",
+            "delete_img": "Supprimer l'image",
+            "confirm": "Confirmer",
+            "cancel": "Annuler"
         },
         "label": {
-            "enabled": "active",
-            "disabled": "inactive"
+            "enabled": "Active",
+            "disabled": "inactive",
+            "name": "Nom",
+            "yes": "Oui",
+            "no": "Non",
+            "title": "Titre",
+            "page": "Page"
         }
     },
     "admin": {
@@ -33,6 +44,7 @@
         },
         "details": {
             "title": "Paramètrer le {{name}}",
+            "title_female": "Paramètrer la {{name}}",
             "subtitle": "Puis sauvegarder"
         },
         "label": {
@@ -67,10 +79,40 @@
             "title": "Rechercher une collectivité",
             "name": "collectivité",
             "name_plural": "collectivités",
+            "message": "Message d'accueil", 
             "which": "Laquelle ?",
             "type_name": "Entrez le nom de la collectivité...",
             "no_results": "Aucune collectivité ne correspond à votre recherche...",
-            "state": "Etat"
+            "state": "Etat",
+            "infos": "Informations générales",
+            "mails_templates": "Modèles de mails",
+            "visa_location": "Emplacement du Visa",
+            "signature_location": "Emplacement de la signature",
+            "classeur_delay": "Durée des classeurs",
+            "placeholder_delay": "Saisir un nombre de 10 à 365",
+            "classeur_delay_help_text": "La durée des classeurs doit être comprise entre 10 et 365 jours",
+            "placeholder_type_name": "Saisir le nom de la collectivité",
+            "placeholder_type_visa_title": "Saisir le titre du VISA",
+            "draggable_help_text": "Déplacer manuellement le tampon pour définir son emplacement",
+            "last_page": "Dérniere page",
+            "first_page": "Première page",
+            "success_edit": "La collectivité a bien été bien modifier",
+            "success_upload_avatar": "L'image a été correctement chargée",
+            "error": {
+                "upload_avatar": "Impossible de charger votre image - erreur {{errorCode}}",
+                "delete_avatar": "Impossible de supprimer votre image - erreur {{errorCode}}",
+                "fail_edit": "Impossible de modifier la collectivité - erreur {{errorCode}}",
+                "fetch": "Impossible de récupérer la collectivité - erreur {{errorCode}}",
+                "field_delay_min": "La durée des classeurs doit être supérieure à 10 jours",
+                "field_delay_max": "La durée des classeurs doit être inférieur à 365 jours",
+                "field_delay_required": "La durée des classeurs est requise",
+                "visa_title": "Le titre du VISA est requis"
+            },
+            "mail": {
+                "new_classeur": "Mail nouveau classeur",
+                "refused_classeur": "Mail classeur refusé",
+                "valid_classeur": "Mail classeur validé"
+            }
         }
     }
 }
