[evo] #1602 - avoir accès à des aides en ligne PDF et vidéos et le détail des mises à jour
 - New components for documentations
 - New endpoint API for documentations
 - Update translation
 - Update SF routes

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -1,5 +1,6 @@
 {
     "common": {
+        "locale" : "fr",
         "no_results": "Aucun {{name}} ne correspond à votre recherche...",
         "classeur": "classeur",
         "classeur_plural": "classeurs",
