--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -1,5 +1,6 @@
 {
     "common": {
+        "locale" : "fr",
         "no_results": "Aucun {{name}} ne correspond à votre recherche...",
         "classeur": "classeur",
         "classeur_plural": "classeurs",
@@ -51,6 +52,13 @@
           "validity": "validité",
           "from": "émis le",
           "to": "expire le"
+        },
+        "help_board":{
+            "title": "Documentation et aides",
+            "title_patchs": "Documentation des mises à jours",
+            "title_helps": "Aides",
+            "title_video": "Vidéo",
+            "view_button": "Voir le document"
         }
     },
     "admin": {
@@ -78,8 +86,8 @@
             "type_name": "Entrez le nom du {{name}}..."
         },
         "details": {
-            "title": "Paramètrer le {{name}}",
-            "title_female": "Paramètrer la {{name}}",
+            "title": "Paramétrer le {{name}}",
+            "title_female": "Paramétrer la {{name}}",
             "subtitle": "Puis sauvegarder"
         },
         "label": {
