[Evo] ref #1641 - add app version in footer
- #1642  add contact link in footer

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -187,5 +187,10 @@
             "name": "role",
             "name_plural": "roles"
         }
+    },
+    "footer": {
+        "contact": "Contact",
+        "general_conditions": "CGU",
+        "version": "Version {{version}}"
     }
 }
