--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -38,7 +38,8 @@
             "title_to_retract": "classeur retractable",
             "title_remove": "classeurs supprimable",
             "title_to_sign_plural": "classeurs à signer",
-            "sort": "trier"
+            "sort": "trier",
+            "search": "Rechercher un classeur"
         },
         "user": {
           "certificate" : "certificat",
