[evo] #1587 - visionner une note automatique lorsqu'une mise à jour est faite ou qu'il y a une alerte
 - Upgrade style
 - Upgrade MenuBarAdmin AppRoute and App component
 - Add note(s) component
 - New Note api end point
 - New relation between Note and User entity
 - Upgrade Sesile translations
 - Add Note component for user
 - Add Note Repository
 - Add foundation icons
 - Fix html display in note user

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -240,6 +240,14 @@
             "success_add": "L'emailing a bien été envoyé",
             "fail_add": "L'emailing n'a pas être envoyé - erreur {{errorCode}}"
         },
+        "notes": {
+            "title": "notes",
+            "complet_name": "Rédiger une note",
+            "subtitle": "Puis envoyez à tous les utilisateurs",
+            "note_title": "Titre",
+            "note_subtitle": "Sous-titre",
+            "note_created": "créé le"
+        },
         "roles_user": {
             "name": "role",
             "name_plural": "roles"
