--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -75,7 +75,7 @@
         },
         "error": {
             "not_extractable_list": "Impossible de récuperer la liste de {{name}} - erreur {{errorCode}}",
-            "not_addable": "Impossible de créer le {{name}} - erreur {{errorCode}}",
+            "add": "Impossible de créer le {{name}} - erreur {{errorCode}}",
             "not_updatable": "Impossible de mettre à jour le {{name}} - erreur {{errorCode}}",
             "not_removable": "Impossible de supprimer le {{name}} - erreur {{errorCode}}"
         },
@@ -127,7 +127,9 @@
             "complet_name": "circuit de validation",
             "applicant_step": "Etape {{ordre}} - Déposante",
             "validat_step": "Etape {{ordre}} - Validante",
-            "add_step": "Ajouter une étape"
+            "add_step": "Ajouter une étape",
+            "not_valid": "Circuit de validation non valide",
+            "validation_conditions": "Vérifier que le circuit contient un \"nom\", au moins un \"type\" et que les étapes contiennent au moins un groupe et/ou plusieurs utilisateurs"
         },
         "user_pack": {
             "name": "groupe utilisateur",
