[evo] #1635 - voir le contenu du classeur
 - Add config to integrate OnlyOffice #2134
 - New routes for documents
 - New security rules for documents and OnlyOffice
 - Add css to display classeur and documents
 - Integrate Documents and OnlyOffice in classeur view
 - Display, upload, delete documents for a classeur
 - Implements logs Actions for delete and upload documents
 - New documents endpoint API
 - Update document controller
 - Add translation for documents
 - Add react dropzone component
 - Remove oneup uploader symfony component
 - Update Symfony bundle
 - Improve note integration
 - Symplify code with const Document in Documents

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -42,6 +42,18 @@
             "sort": "trier",
             "search": "Rechercher un classeur"
         },
+        "documents": {
+            "name": "document",
+            "name_plural": "documents",
+            "title_list": "liste de documents",
+            "label_dropzone": "Déposer vos documents ici",
+            "full_screen": "Voir en plein écran",
+            "delete_document": "Supprimer le document",
+            "btn_origin": "original",
+            "btn_visa": "visa",
+            "btn_signature": "signature",
+            "btn_both": "visa + signature"
+        },
         "user": {
           "certificate" : "certificat",
           "certificate_serial" : "N° de série :",
