[evo] #1630 - ajouter un nouveau classeur
 - Add route for new classeur
 - Add translations for new classeur
 - Add new classeur form
 - Add circuit in classeur
 - Refactor Circuit
 - Add document form type
 - Add form submit in ClasseurNew component
 - Add DocumentPreview component for files
 - Remove unuse etapeDeposante in classeur Entity
 - Add circuit_id in classeur Entity
 - Add functions for user visible in classeur repository
 - Fix DocumentRepository upload function
 - Add visibility to new classeur
 - Improve circuit to new classeur submit
 - Improve circuit in order to not display user depositor
 - Add copy for users
 - Add mail notification
 - Limit accept upload file
 - fix userPack display
 - Add new minDate and maxDate to datePicker
 - Improve functions from merge discussion

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -32,7 +32,8 @@
             "yes": "Oui",
             "no": "Non",
             "title": "Titre",
-            "page": "Page"
+            "page": "Page",
+            "visibility": "Visibilité"
         },
         "menu": {
             "connection": "Connexion",
@@ -48,7 +49,6 @@
             "stats_title_name": "Type",
             "stats_title_total": "Total",
             "classeurs_add": "Création de classeur"
-
         },
         "classeurs": {
             "name": "classeur",
@@ -57,10 +57,18 @@
             "title_to_retract": "classeur retractable",
             "title_remove": "classeurs supprimable",
             "title_to_sign_plural": "classeurs à signer",
+            "title_add": "Création d'un nouveau classeur",
             "sort": "trier",
             "search": "Rechercher un classeur",
             "date_limit": "Date limite le",
             "classeur_name": "Nom du classeur",
+            "users_copy": "Utilisateurs en copie",
+            "users_copy_select": "Sélectionner les utilisateurs",
+            "error": {
+                "missing_input": "champs manquants",
+                "post": "Impossible de créer le classeur",
+                "no_circuits": "Vous ne faites partis d'aucun circuits"
+            },
             "status": {
               "name": "status",
               "refuse": "Refusé",
@@ -72,6 +80,10 @@
             },
             "comments": {
               "name": "Commentaires du classeur"
+            },
+            "label": {
+              "circuits": "Liste des circuits",
+              "types": "Type de classeur"
             },
             "button": {
                 "add_classeur": "Nouveau classeur",
@@ -87,6 +99,7 @@
             "name": "document",
             "name_plural": "documents",
             "title_list": "liste de documents",
+            "title_preview": "Prévisualisation du document",
             "label_dropzone": "Déposer vos documents ici",
             "full_screen": "Voir en plein écran",
             "delete_document": "Supprimer le document",
@@ -183,11 +196,11 @@
         "circuit": {
             "name": "circuit",
             "name_plural": "circuits",
-            "complet_name": "circuit de validation",
+            "complet_name": "Circuit de validation",
             "depositor": "Déposant",
             "validator": "Validant",
             "applicant_step": "Etape {{ordre}} - Déposante",
-            "validat_step": "Etape {{ordre}} - Validante",
+            "validat_step": "Etape {{ordre}}",
             "add_step": "Ajouter une étape",
             "not_valid": "Circuit de validation non valide",
             "remove_step": "Supprimer l'étape",
