[Evo] ref #2153 - add descption in basic classeur infos
[Fix] ref #2753 - partial fix

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -280,6 +280,7 @@
         "name": "Classeur",
         "deposited": "Déposé le",
         "deadline": "Date limite le",
+        "users_in_copy": "Utilisateurs en copie",
         "success": {
             "edit": "Le classeur à bien été modifié"
         },
