[Fix] ref #2838 - form validation to add type

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -171,7 +171,8 @@
             "name": "type",
             "name_plural": "types",
             "complet_name": "type de classeurs",
-            "complet_name_plural": "types de classeurs"
+            "complet_name_plural": "types de classeurs",
+            "help_text_add_type": "Saisir un nom pour ajouter un nouveau type"
         },
         "etape": {
             "name": "étape",
