--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -91,6 +91,8 @@
                 "sign_title": "Signer le classeur",
                 "revert_title": "Rétracter le classeur",
                 "refus_title": "Refuser le classeur",
+                "remove_title": "Retirer le classeur",
+                "delete_title": "Suprimer le classeur",
                 "comment_title": "Commenter le classeur"
             }
 
@@ -343,7 +345,8 @@
         "deadline": "Date limite le",
         "users_in_copy": "Utilisateurs en copie",
         "success": {
-            "edit": "Le classeur à bien été modifié"
+            "edit": "Le classeur à bien été modifié",
+            "delete": "Le classeur à bien été supprimé"
         },
         "error": {
             "edit": "Impossible de modifier le classeur - erreur {{errorCode}}"
